opam-version: "1.2"
name: "pure-splitmix"
synopsis: "SplitMix PRNG with a pure interface"
version: "0.3"
maintainer: "Li-yao Xia <lysxia@gmail.com>"
authors: "Li-yao Xia"
homepage: "https://github.com/Lysxia/pure-splitmix"
dev-repo: "https://github.com/Lysxia/pure-splitmix.git"
bug-reports: "https://github.com/Lysxia/pure-splitmix/issues"
license: "MIT"
build: [ "dune" "build" "-p" name "-j" jobs ]
depends: [
  "dune" {build}
  "ocaml"
]
